; ModuleID = '/home/carl/AnghaBench/linux/drivers/pcmcia/extr_xxs1500_ss.c_au1x00_pcmcia_set_mem_map.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pcmcia/extr_xxs1500_ss.c_au1x00_pcmcia_set_mem_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcmcia_socket = type { i32 }
%struct.pccard_mem_map = type { i32, i64, i64 }
%struct.xxs1500_pcmcia_sock = type { i64, i64 }

@MAP_ATTRIB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pcmcia_socket*, %struct.pccard_mem_map*)* @au1x00_pcmcia_set_mem_map to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @au1x00_pcmcia_set_mem_map(%struct.pcmcia_socket* %0, %struct.pccard_mem_map* %1) #0 {
  %3 = alloca %struct.pcmcia_socket*, align 8
  %4 = alloca %struct.pccard_mem_map*, align 8
  %5 = alloca %struct.xxs1500_pcmcia_sock*, align 8
  store %struct.pcmcia_socket* %0, %struct.pcmcia_socket** %3, align 8
  store %struct.pccard_mem_map* %1, %struct.pccard_mem_map** %4, align 8
  %6 = load %struct.pcmcia_socket*, %struct.pcmcia_socket** %3, align 8
  %7 = call %struct.xxs1500_pcmcia_sock* @to_xxs_socket(%struct.pcmcia_socket* %6)
  store %struct.xxs1500_pcmcia_sock* %7, %struct.xxs1500_pcmcia_sock** %5, align 8
  %8 = load %struct.pccard_mem_map*, %struct.pccard_mem_map** %4, align 8
  %9 = getelementptr inbounds %struct.pccard_mem_map, %struct.pccard_mem_map* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = load i32, i32* @MAP_ATTRIB, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %24

14:                                               ; preds = %2
  %15 = load %struct.xxs1500_pcmcia_sock*, %struct.xxs1500_pcmcia_sock** %5, align 8
  %16 = getelementptr inbounds %struct.xxs1500_pcmcia_sock, %struct.xxs1500_pcmcia_sock* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = load %struct.pccard_mem_map*, %struct.pccard_mem_map** %4, align 8
  %19 = getelementptr inbounds %struct.pccard_mem_map, %struct.pccard_mem_map* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = add nsw i64 %17, %20
  %22 = load %struct.pccard_mem_map*, %struct.pccard_mem_map** %4, align 8
  %23 = getelementptr inbounds %struct.pccard_mem_map, %struct.pccard_mem_map* %22, i32 0, i32 2
  store i64 %21, i64* %23, align 8
  br label %34

24:                                               ; preds = %2
  %25 = load %struct.xxs1500_pcmcia_sock*, %struct.xxs1500_pcmcia_sock** %5, align 8
  %26 = getelementptr inbounds %struct.xxs1500_pcmcia_sock, %struct.xxs1500_pcmcia_sock* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load %struct.pccard_mem_map*, %struct.pccard_mem_map** %4, align 8
  %29 = getelementptr inbounds %struct.pccard_mem_map, %struct.pccard_mem_map* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = add nsw i64 %27, %30
  %32 = load %struct.pccard_mem_map*, %struct.pccard_mem_map** %4, align 8
  %33 = getelementptr inbounds %struct.pccard_mem_map, %struct.pccard_mem_map* %32, i32 0, i32 2
  store i64 %31, i64* %33, align 8
  br label %34

34:                                               ; preds = %24, %14
  ret i32 0
}

declare dso_local %struct.xxs1500_pcmcia_sock* @to_xxs_socket(%struct.pcmcia_socket*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
